addons-standalone/jaeger/gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: addons-jaeger-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - jaeger.qcloud.jijiechen.com
    port:
      name: http
      number: 80
      protocol: HTTP
